--- a/shop/templates/shop/base.xhtml
+++ b/shop/templates/shop/base.xhtml
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="header">
-      <a href="/" class="logo">Fly Buy</a>
+      <a href="/" class="logo"><h2 style="font-size: 3rem; font-weight:bold; margin: 0.2rem 0 0.2rem 0">Fly Buy</h2></a>
     </div>
     <div id="subheader">
       <div class="cart">
