--- a/shop/templates/shop/product/list.xhtml
+++ b/shop/templates/shop/product/list.xhtml
@@ -28,7 +28,7 @@
         </a>
         <a href="{{ product.get_absolute_url }}">{{ product.name }}</a>
         <br>
-        Ghs {{ product.price }}
+        $ {{ product.price }}
       </div>
     {% endfor %}
   </div>
